--- a/Morser/Localizable.xcstrings
+++ b/Morser/Localizable.xcstrings
@@ -44,6 +44,12 @@
             "state" : "translated",
             "value" : "**Dinlemeye başla**"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "**Почніть слухати**"
+          }
         }
       }
     },
@@ -90,11 +96,23 @@
             "state" : "translated",
             "value" : "**Dinlemeye başla**"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "**Припиніть слухати**"
+          }
         }
       }
     },
     "%.0f ms" : {
       "localizations" : {
+        "el" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%.0f ms"
+          }
+        },
         "en-GB" : {
           "stringUnit" : {
             "state" : "translated",
@@ -142,11 +160,23 @@
             "state" : "translated",
             "value" : "%.0f ms"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%.0f ms"
+          }
         }
       }
     },
     "%@" : {
       "localizations" : {
+        "el" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@"
+          }
+        },
         "en-GB" : {
           "stringUnit" : {
             "state" : "translated",
@@ -190,6 +220,12 @@
           }
         },
         "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@"
+          }
+        },
+        "uk" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "%@"
@@ -199,6 +235,12 @@
     },
     "%lld" : {
       "localizations" : {
+        "el" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld"
+          }
+        },
         "en-GB" : {
           "stringUnit" : {
             "state" : "translated",
@@ -242,6 +284,12 @@
           }
         },
         "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld"
+          }
+        },
+        "uk" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "%lld"
@@ -292,6 +340,12 @@
             "state" : "translated",
             "value" : "Tanımaya yardımcı olmak için dokunsal özelliklerin yanında %lldHz sesi çalınacaktır."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Звук частотою %lldГц буде відтворено разом з тактильним сигналом для полегшення розпізнавання."
+          }
         }
       }
     },
@@ -337,6 +391,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Çevir"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Кодувати"
           }
         }
       }
@@ -384,6 +444,12 @@
             "state" : "translated",
             "value" : "Titreşim Hızı(%lf)"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Швидкість тактильних сигналів (%lf)"
+          }
         }
       }
     },
@@ -429,6 +495,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Titreşim Zaman Birimi"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Одиниця часу тактильних сигналів"
           }
         }
       }
@@ -476,6 +548,12 @@
             "state" : "translated",
             "value" : "Anlıyorum, size yardım etmeme izin verin."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я розумію, дозвольте мені допомогти вам."
+          }
         }
       }
     },
@@ -521,6 +599,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Menü seçeneklerini sizin için açıklayacağım."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я опишу для вас варіанти меню."
           }
         }
       }
@@ -568,6 +652,12 @@
             "state" : "translated",
             "value" : "Dokunarak gezinmenize yardımcı olacağım."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я допоможу вам орієнтуватися за допомогою дотику."
+          }
         }
       }
     },
@@ -613,6 +703,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Sizi otobüs istasyonuna götüreceğim."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я проведу вас до автобусної зупинки."
           }
         }
       }
@@ -660,6 +756,12 @@
             "state" : "translated",
             "value" : "Dikkatinizi çekmek için elinize dokunacağım."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я постукаю вас по руці, щоб привернути вашу увагу."
+          }
         }
       }
     },
@@ -705,6 +807,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Sizin için bunu yazacağım."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я запишу це для вас."
           }
         }
       }
@@ -752,6 +860,12 @@
             "state" : "translated",
             "value" : "Sizinle dokunarak iletişim kuruyorum."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я спілкуюся з вами через дотик."
+          }
         }
       }
     },
@@ -797,6 +911,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Yardım için buradayım."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Я тут, щоб допомогти."
           }
         }
       }
@@ -844,6 +964,12 @@
             "state" : "translated",
             "value" : "Sık kullanılan bir cümle girin."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Вставте часто вживане речення"
+          }
         }
       }
     },
@@ -889,6 +1015,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Size konumu tarif edeceğim."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Дозвольте мені описати вам місце розташування."
           }
         }
       }
@@ -936,6 +1068,12 @@
             "state" : "translated",
             "value" : "Dinle"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Слухайте"
+          }
         }
       }
     },
@@ -981,6 +1119,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Mors kodu burada olacak!"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Тут буде азбука Морзе!"
           }
         }
       }
@@ -1028,6 +1172,12 @@
             "state" : "translated",
             "value" : "Titreşimler dışında bir ses oynatılmayacak."
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Звук не буде відтворюватися разом з тактильними сигналами."
+          }
         }
       }
     },
@@ -1073,6 +1223,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Titreşimleri oynat."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Відтворити тактильні сигнали"
           }
         }
       }
@@ -1120,6 +1276,12 @@
             "state" : "translated",
             "value" : "Hızlı Çeviri"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Швидкий переклад"
+          }
         }
       }
     },
@@ -1165,6 +1327,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Çevirilecek cümle"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Речення для кодування"
           }
         }
       }
@@ -1212,6 +1380,12 @@
             "state" : "translated",
             "value" : "Ayarlar"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Налаштування"
+          }
         }
       }
     },
@@ -1257,6 +1431,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Ses"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "звук"
           }
         }
       }
@@ -1304,6 +1484,12 @@
             "state" : "translated",
             "value" : "Ses Titreşimleri"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Звукові тактильні сигнали"
+          }
         }
       }
     },
@@ -1349,6 +1535,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Frekans"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Висота звуку"
           }
         }
       }
@@ -1396,6 +1588,12 @@
             "state" : "translated",
             "value" : "Frekans"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Висота звуку (%lf)"
+          }
         }
       }
     },
@@ -1441,6 +1639,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Titreşimleri durdur"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Припинити тактильні сигнали"
           }
         }
       }
@@ -1494,6 +1698,12 @@
             "state" : "translated",
             "value" : "Zaman birimi ms (milisaniye) cinsinden ifade edilir.\nZamanlamalar:\n. = 1 zaman birimi (%1$.0f ms)\n- = 3 zaman birimi (%2$.0f ms)\nAynı semboller arasındaki boşluk = 1 zaman birimi (%3$.0f ms)\nFarklı semboller arasındaki boşluk = 3 zaman birimi (%4$.0f ms)\nKelimeler arasındaki boşluk = 7 zaman birimi (%5$.0f ms)"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Одиниця часу виражається в мілісекундах (мс).\nЧасові інтервали:\n. = 1 одиниця часу (%1$.0f мс)\n= 3 одиниці часу (%2$.0f мс)\nПроміжок між однаковими символами = 1 одиниця часу (%3$.0f мс)\nПроміжок між різними символами = 3 одиниці часу (%4$.0f мс)\nПроміжок між словами = 7 одиниць часу (%5$.0f мс)"
+          }
         }
       }
     },
@@ -1539,6 +1749,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Zamanlama"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Часові інтервали"
           }
         }
       }
@@ -1586,6 +1802,12 @@
             "state" : "translated",
             "value" : "Çeviri burada olacak!"
           }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Тут буде транскрипт!"
+          }
         }
       }
     },
@@ -1631,6 +1853,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Evet, sana yol gösterebilirim."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Так, я можу вас направити."
           }
         }
       }
