--- a/Morser/Localizable.xcstrings
+++ b/Morser/Localizable.xcstrings
@@ -2497,6 +2497,12 @@
             "value" : "귀하의 장치는 햅틱을 지원하지 않습니다!\n 소리만 재생됩니다."
           }
         },
+        "nap" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Il toje dispositivo nun supporta o' feedback aptico!\nSolo o' suono verrà riprodotto."
+          }
+        },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
@@ -2529,6 +2535,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "탭 한 번으로 저장된 문장을 재생할 수 있습니다!"
+          }
+        },
+        "nap" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Le toje frasi salvate possono essere ascoltate cu nu' tap!"
           }
         },
         "ru" : {
